resources/css/app.css
a,
a:visited {
  color: #07d;
  text-decoration: none;
}

a:hover {
  color: #09f;
}

#main-nav .q-item__section--avatar {
  min-width: 28px;
  padding-right: 12px;
}

#main-nav .q-item__section--side>.q-icon {
  font-size: 20px;
  color: #555;
}

#main-nav .q-item--active .q-icon {
  color: #309dcf;
}

#main-nav .q-item--active {
  background: #d0f0ff;
  color: #309dcf;
  font-weight: bold;
}

#main-nav .q-item {
  min-height: 36px !important;
}

#main-nav .subnav {
  padding-left: 35px;
  box-shadow: inset 2px 0 0 #888;
}

#main-nav .subnav .subnav {
  box-shadow: inset 4px 0 0 #666;
}

#main-nav .subnav .subnav .subnav {
  box-shadow: inset 8px 0 0 #444;
}

.q-btn {
  text-transform: none !important;
}

.q-icon {
  font-family: "Material Symbols Outlined", sans-serif !important;
}

.material-outlined {
  font-family: "Material Symbols Outlined" !important;
}

.material-filled {
  font-family: "Material Icons" !important;
}

.filter-bar {
  background: #fff;
  border-bottom: 1px solid #eee;
  padding: 0 !important;
  width: 100%;
}

.cursor-pointer {
  cursor: pointer;
}

.va-top td {
  vertical-align: top !important;
}

/** Paginasi center */
.q-table__card {
  width: 100%;
  display: flex !important;
  flex-wrap: inherit !important;
  align-items: center !important;
  justify-content: center !important;
}

.q-table__card>* {
  width: 100%;
}

.q-table__bottom {
  justify-content: center !important;
}

.q-table__bottom .q-table__separator {
  display: none !important;
}

/** Select menampilkan elipsis ketika teks terlalu panjang */
.custom-select .q-field__native {
  flex-wrap: nowrap !important;
}


.custom-select .q-field__control-container {
  white-space: nowrap;
}

.editable-select .q-field__native span {
  overflow: hidden !important;
}

.editable-select .q-field__input--padding {
  display: none !important;
}

.custom-select.hide-input {
  overflow: hidden;
}

.custom-select .q-field__control-container * {
  max-width: 133%;
  /* display: block; */
  overflow: hidden;
  text-overflow: ellipsis;
}

/** butuh border untuk pemisah tab dengan content */
.q-tabs {
  border-bottom: 1px solid #ddd;
}

.q-tab {
  text-transform: none !important;
}

.q-tab__label {
  font-weight: bold !important;
  color: #555;
}

.no-wrap {
  text-wrap-mode: nowrap;
}

/** table detail view */
table.detail {
  border-collapse: collapse;
  width: 100%;
}

table.detail td {
  vertical-align: top;
  padding: 2px 5px;
}

table.detail tr:nth-child(even) td {
  background-color: #fafafa;
}

/** Timeline */
.q-timeline__heading-title {
  font-size: 18px;
  margin: 0;
  padding: 0 !important;
}

.q-timeline__title {
  font-size: 16px;
  margin-bottom: 0 !important;
  padding-bottom: 0;
}

.q-timeline__subtitle {
  margin: 0 !important;
}

.q-timeline__entry {
  margin: 0 !important;
}

.q-chip--dense {
  padding: 0 8px !important;
}

/** Tabel full height */
.full-height-table {
  height: calc(100vh - 67px);
}

.full-height-table2 {
  height: calc(100vh - 84px - 67px) !important;
}

.full-height-table .q-table__top,
.full-height-table .q-table__bottom,
.full-height-table thead tr:first-child th {
  background-color: #fff;
}

.full-height-table thead tr th {
  position: sticky;
  z-index: 1;
}

.full-height-table thead tr:first-child th {
  top: 0;
}

.full-height-table tbody {
  scroll-margin-top: 48px;
}

.full-height-table {
  width: 100%;
  border-collapse: collapse;
  table-layout: fixed;
}

.full-height-table th,
.full-height-table td {
  padding: 10px;
  /* text-align: left; */
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.full-height-table .wrap-column {
  white-space: normal;
  word-wrap: break-word;
}

.elipsis {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.full-height-table .q-virtual-scroll__content tr:last-child td {
  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
}

.q-table th {
  font-weight: bold !important;
  color: #666;
}

.q-table td .q-btn,
.q-table__bottom * {
  color: #555;
}

.q-table .q-tr.inactive {
  background-color: #fcc !important;
}

.q-table .low-stock {
  color: red;
}

.q-table .over-stock {
  color: orange;
}

.q-icon.inline-icon {
  vertical-align: top;
  font-size: 14px;
  top: 2px;
  line-height: 1;
  margin-right: 2px;
}

/*
 * Gaya umum untuk menghilangkan outline bawaan browser
 * Ini adalah langkah opsional tapi direkomendasikan
 */
:focus {
  outline: none;
}

/*
 * Gaya dasar untuk tombol saat fokus
 * Memberikan outline yang solid dan kontras
 */
.q-btn:focus {
  outline: 1px solid #ff00bf; /* Warna biru yang kontras */
  outline-offset: 1px; /* Jarak antara outline dan tombol */
}

/*
 * Gaya lain yang lebih menarik:
 * Menggunakan box-shadow sebagai pengganti outline
 */
.q-btn:focus-visible {
  box-shadow: 0 0 0 2px rgb(234, 0, 255);
}

